--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -10,14 +10,69 @@
 
     header {
         width: 100%;
-        background-color: green;
+        background-color: var(--dark-blue-nav);
+        padding: 32px;
         
         .header__content {
             width: 100%;
             max-width: 1366px;
             margin: 0 auto; /* fica no meio */
+            display: flex;
+            align-items: center;
+            column-gap: 32px;
+            color: var(--white);
+            
+            > span {
+                /* > significa primeiro span */
+                width: 2px;
+                height: 40px;
+                background-color: var(--white);
+            }
+            
+            nav {
+                display: flex;
+                align-items: center;
+                column-gap: 40px;
+                
+                margin-left: 20px;
+                
+                a {
+                    font-size: 14px;
+                    font-weight: bold;
+                    letter-spacing: 0.3px;
+                }
+            }
+            
+            > div {
+                display: flex;
+                align-items: center;
+                column-gap: 12px;
+
+                margin-left: auto;
+                
+                picture {
+                    position: relative;
+                    width: 48px;
+                    height: 48px;
+                    border-radius: 48px;
+                    overflow: hidden;
+                    
+                    img {
+                        object-fit: cover;
+                        
+                    }
+                }
+
+                strong {
+                    font-size: 12px;
+                }
+
+                svg {
+                    transform: rotate(180deg);
+                }
+            }
+            
         }
-        
     }
     
     main {
