--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -30,10 +30,13 @@
             writing-mode: vertical-rl;
         }
     }
+}
 
-    .characters {
+    .agents {
         flex: 1;
         background: blue;
-    }
 
-}
+        display: flex;
+        column-gap: 16px;
+    }
+    
