--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -34,7 +34,7 @@
 
     .agents {
         flex: 1;
-        background: blue;
+        // background: blue;
 
         display: flex;
         column-gap: 16px;
