--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,6 +27,7 @@
 
   --red-buttons: #ff4854;
   --dark-blue-bg1: #0f1923;
+  --dark-blue-bg1-opacity: rgba(15, 25, 35,0.9);
   --black: #111111;
   --cream-text: #ece8e1;
   --dark-blue-nav: #27272f;
