--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -33,10 +33,6 @@
 }
 
     .agents {
-        flex: 1;
-        // background: blue;
-
-        display: flex;
-        column-gap: 16px;
+        width: 100%;
     }
     
